# rotary-switch-helper

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: release.yml  rust.yml
src/: lib.rs  rotary_encoder.rs  rotary_encoder_switch.rs  switch_encoder.rs
tests/: hardware_integration_test.rs
