[package]
name = "rotary-switch-helper"
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "./README.md"
description = "Helper crate for easy use of rotary (-switch) encoders on a raspberry pi"
repository = "https://github.com/FLimburg/rotary-switch-helper"
authors = ["Florian Limburg"]
keywords = ["rotary", "switch", "pi", "encoder"]


[dependencies]
anyhow = "1.0.100"
atomic_enum = "0.3.0"
log = "0.4.29"
rppal = "0.22.1"
